# ConversionBot

./: .gitignore  Cargo.toml
src/: data.rs  main.rs  slash.rs  tests.rs
src/commands/: id.rs
src/core/: conversion.rs
