[package]
name = "conversion_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6", features = [  "runtime-async-std-native-tls", "mysql" ] }
regex = "1.7.1"
